[package]
name = "modular_scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
thiserror = "1.0"
anyhow = "1.0"
trust-dns-resolver = "0.21"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
async-trait = "0.1"
clap = { version = "3.1", features = ["cargo"] }
regex = "1"
url = "2"